--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.5.2",
+    "node": "^13.5.0",
     "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "sass": "^1.24.2"
   },
   "scripts": {
     "start": "react-scripts start",
